# Torch-Chemistry

./: .gitignore  CMakeLists.txt  README.md  SAS.md  SASintcoord.md  intcoord.md  libtorch-note.md
include/tchem/: FORTRAN.hpp  SAS.hpp  SASintcoord.hpp  SApolynomial.hpp  chemistry.hpp  gaussian.hpp  intcoord.hpp  linalg.hpp  phaser.hpp  polynomial.hpp  tchem.hpp  utility.hpp
include/tchem/IC/: IntCoord.hpp  IntCoordSet.hpp  InvDisp.hpp
include/tchem/chem/: normal_mode.hpp  orderer.hpp  phaser.hpp
include/tchem/intcoord/: IntCoord.hpp  IntCoordSet.hpp  InvDisp.hpp  SASIC.hpp  SASICSet.hpp
include/tchem/polynomial/: Polynomial.hpp  PolynomialSet.hpp  SAP.hpp  SAPSet.hpp
script/: gen_sapoly.py  sapoly.in
share/cmake/tchem/: BAK.txt  tchemConfig.cmake
source/: SAS.cpp  SASintcoord.cpp  SApolynomial.cpp  chemistry.cpp  gaussian.cpp  intcoord.cpp  linalg.cpp  phaser.cpp  polynomial.cpp  utility.cpp
source/FORTRAN/: My_dsygv.f90
source/IC/: IntCoord.cpp  IntCoordSet.cpp  InvDisp.cpp
source/chem/: chemistry.cpp  normal_mode.cpp  orderer.cpp  phaser.cpp
source/intcoord/: IntCoord.cpp  IntCoordSet.cpp  InvDisp.cpp  SASIC.cpp  SASICSet.cpp
source/polynomial/: Polynomial.cpp  PolynomialSet.cpp  SAP.cpp  SAPSet.cpp
test/: CMakeLists.txt  gaussian.cpp  linalg.cpp  main.cpp  polynomial.cpp  retest.sh  test.cpp  test.sh
test/SAS/: IntCoordDef  SAS.in  main.cpp  min-A1.xyz  slow-1.5.xyz
test/SASintcoord/: main.cpp  min-A1.xyz
test/SASintcoord/input/: B.xyz  BI.xyz  E.xyz  I.xyz  IntCoordDef  N.xyz  NB.xyz  NBI.xyz  NI.xyz  SAS.in  origin.int  sad-A1.xyz  sad-B1.xyz
test/SApolynomial/: 1.in  2.in  CMakeLists.txt  main.cpp  sapoly.in
test/SApolynomial/input/: 1.in  2.in
test/chemistry/: main.cpp
test/gaussian/: main.cpp
test/intcoord/: CMakeLists.txt  IntCoordDef  intcfl  main.cpp
test/intcoord/input/: B1rot-2.2.xyz  advanced_IntCoordDef  geom  intgeom  log  min-B1.xyz
test/linalg/: main.cpp
test/normal_mode/: IntCoordDef  main.cpp
test/normal_mode/input/: geom  hessian
test/orderer/: main.cpp
test/phaser/: main.cpp
test/polynomial/: CMakeLists.txt  main.cpp
tools/: build.sh  rebuild.sh
tools/cart2SASIC/: CMakeLists.txt  main.cpp
tools/cart2int/: CMakeLists.txt  main.cpp
